--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Passionate about creating experiences that leaves a long lasting impression in people hearts."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/visula_logo.png" />
     <!--
